@@ -22,6 +22,7 @@ from ui.Ui_updatewindow import Ui_updateWindow
 from ui.Ui_downloadwindow import Ui_downloadWindow
 from ui.Ui_connexionwindow import Ui_connexionWindow
 from ui.Ui_waitwindow import Ui_waitWindow
+from ui.Ui_batlinkwindow import Ui_batlinkWindow
 from functions.utils import (weather_to_pictogrammes, days_months_dictionary, wind_dir_to_pictogramme,
                              code_to_departement, stylesheet_creation_function, font_creation_function,
                              icon_creation_function, stylesheet_creation_function_pi)
@@ -720,4 +721,33 @@ class MyConnexion(QtWidgets.QDialog, Ui_connexionWindow):
 
     def close_window(self):
         logging.info('gui - other_windows_functions.py - MyConnexion - close_window')
+        self.close()
+
+
+class MyBatLink(QtWidgets.QDialog, Ui_batlinkWindow):
+    def __init__(self, bat, link, gui_path, parent=None):
+        logging.debug('gui - other_windows_functions.py - MyBatLink - __init__')
+        QtWidgets.QWidget.__init__(self, parent)
+        self.setupUi(self)
+        if platform.system() == 'Linux':
+            self.setCursor(QtGui.QCursor(QtCore.Qt.BlankCursor))
+        shadow = QtWidgets.QGraphicsDropShadowEffect()
+        shadow.setOffset(5)
+        shadow.setBlurRadius(25)
+        self.setGraphicsEffect(shadow)
+        self.setWindowFlags(QtCore.Qt.FramelessWindowHint)
+        self.gui_path = gui_path
+        self.bat = bat
+        self.link = link
+        self.ok_button.clicked.connect(self.close_window)
+        self.setWindowIcon(icon_creation_function('info_popup_icon.svg', self.gui_path))
+        self.ok_button.setIcon(icon_creation_function('exit_icon.svg', self.gui_path))
+        self.set_details()
+
+    def set_details(self):
+        self.batterie_lb_2.setText(f'{int(self.bat)} %')
+        self.signal_lb_3.setText(f'{int(round((self.link / 255) * 100, 0))} %')
+
+    def close_window(self):
+        logging.info('gui - other_windows_functions.py - MyBatLink - close_window')
         self.close()
